pitch section overlap fix

--- a/src/App.css
+++ b/src/App.css
@@ -536,7 +536,8 @@ p {
   font-size: 1.5rem;
 }
 .Pitch{
-  height: 80vh;
+  height: 100%;
+  margin: 10% 0;
   font-size: 2rem;
 }
 .Pricing {
